[package]
name = "discord"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "cache",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.11.4"

